--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "docker-compose": "^0.23.5",
+    "tmp": "^0.2.1",
+    "yaml": "^1.10.0",
     "yargs": "^16.0.3"
   }
 }
