--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "tmp": "^0.2.1",
     "yaml": "^1.10.0",
     "yargs": "^16.0.3"
+  },
+  "devDependencies": {
+    "@syntro-opensource/eslint-config-base": "^1.0.2",
+    "eslint": "^7.11.0"
   }
 }
