--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@syntro-opensource/eslint-config-base": "^1.0.2",
-    "eslint": "^7.11.0"
+    "eslint": "^7.11.0",
+    "jest": "^26.5.3"
   }
 }
